--- a/.github/workflows/compile-scss.yml
+++ b/.github/workflows/compile-scss.yml
@@ -39,6 +39,6 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add styles/**/*.css
+          git add styles/*.css
           git commit -m "GitHub Actions: compile scss" || echo "No changes to commit"
           git push
